Estate multiline truncation fix

--- a/src/components/app-content-renderer/styles/panels.scss
+++ b/src/components/app-content-renderer/styles/panels.scss
@@ -41,15 +41,18 @@
         align-items: normal;
         .estate-group {
           margin-right: var(--pf-global--spacer--md);
+          .pf-c-description-list__text {
+            width: 140px;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical; 
+            overflow: hidden;
+          }
           .estate-section {
             .pf-c-description-list__text {
-              width: 140px;
+              height: 50px;
               p {
                 font-size: var(--pf-global--FontSize--md);
-                padding-bottom: var(--pf-global--spacer--md);
-                overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
                 &::after {
                   content: '\00a0';
                 }
@@ -58,12 +61,9 @@
           }
           .estate-title {
             .pf-c-description-list__text {
-              width: 140px;
+              height: 40px;
               p {
                 font-size: var(--pf-global--FontSize--sm);
-                white-space: nowrap; 
-                overflow: hidden;
-                text-overflow: ellipsis;
               }
             }
           }
@@ -118,6 +118,9 @@
       .recommendation-section {
         break-inside: avoid-column;
         flex-wrap: nowrap;
+        &:last-child {
+          padding-bottom: var(--pf-global--spacer--lg);
+        }
       }
 
       .recommendation-group {
